test/performance/vectorization/vectorizeOnly/constChecking/standaloneConstChecking.good
standaloneConstChecking.chpl:7: error: cannot assign to const variable
standaloneConstChecking.chpl:8: error: cannot assign to const variable
standaloneConstChecking.chpl:17: error: cannot assign to const variable
standaloneConstChecking.chpl:22: error: cannot assign to const variable
standaloneConstChecking.chpl:28: error: cannot assign to const variable
standaloneConstChecking.chpl:33: error: cannot assign to const variable
